peersrpc: add gossip inject api
